add_library(USER_LIB INTERFACE)
set_property(TARGET USER_LIB
    PROPERTY INTERFACE_INCLUDE_DIRECTORIES
    ${CMAKE_CURRENT_LIST_DIR}
    )

file(GLOB USER_LIB_SRC
    ${CMAKE_CURRENT_LIST_DIR}/*.c
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
)

add_library(user_lib STATIC
    ${USER_LIB_SRC}
)

target_include_directories(user_lib PRIVATE
    $<TARGET_PROPERTY:USER_LIB,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:WIFI_LIB,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:PUBSUBCLIENT_LIB,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:arduino,INCLUDE_DIRECTORIES>
)

target_compile_definitions(user_lib PUBLIC
    $<TARGET_PROPERTY:arduino,COMPILE_DEFINITIONS>
)

target_compile_options(user_lib PUBLIC
    $<TARGET_PROPERTY:arduino,COMPILE_OPTIONS>
)
